package fr.unilim.iut.utils;

@SuppressWarnings("serial")
public class DebordementEspaceJeuException extends RuntimeException {

    public DebordementEspaceJeuException(String message) {
        super(message);
    }

}
