package fr.unilim.iut.utils;

@SuppressWarnings("serial")
public class HorsEspaceJeuException extends RuntimeException {

    public HorsEspaceJeuException(String message) {
        super(message);
    }

}
