package fr.unilim.iut.utils;

@SuppressWarnings("serial")
public class MissileException extends RuntimeException {
    public MissileException(String message) {
        super(message);
    }
}
