@startuml

title __SPACEINVADER's Class Diagram__\n

  namespace fr.unilim.iut {
    class fr.unilim.iut.Main {
    }
  }
  

  namespace fr.unilim.iut {
    namespace model {
      class fr.unilim.iut.model.Collision {
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace model {
      class fr.unilim.iut.model.Constante {
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace model {
      class fr.unilim.iut.model.DessinSpaceInvaders {
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace model {
      class fr.unilim.iut.model.Dimension {
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace model {
      enum Direction {
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace model {
      class fr.unilim.iut.model.Envahisseur {
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace model {
      class fr.unilim.iut.model.Missile {
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace model {
      class fr.unilim.iut.model.Position {
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace model {
      class fr.unilim.iut.model.SpaceInvaders {
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace model {
      abstract class fr.unilim.iut.model.Sprite {
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace model {
      class fr.unilim.iut.model.Vaisseau {
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace moteurjeu {
      class fr.unilim.iut.moteurjeu.Commande {
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace moteurjeu {
      class fr.unilim.iut.moteurjeu.Controleur {
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace moteurjeu {
      interface fr.unilim.iut.moteurjeu.DessinJeu {
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace moteurjeu {
      class fr.unilim.iut.moteurjeu.InterfaceGraphique {
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace moteurjeu {
      interface fr.unilim.iut.moteurjeu.Jeu {
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace moteurjeu {
      class fr.unilim.iut.moteurjeu.MoteurGraphique {
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace moteurjeu {
      class fr.unilim.iut.moteurjeu.PanelDessin {
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace utils {
      class fr.unilim.iut.utils.DebordementEspaceJeuException {
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace utils {
      class fr.unilim.iut.utils.HorsEspaceJeuException {
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace utils {
      class fr.unilim.iut.utils.MissileException {
      }
    }
  }
  

  fr.unilim.iut.model.DessinSpaceInvaders .up.|> fr.unilim.iut.moteurjeu.DessinJeu
  fr.unilim.iut.model.DessinSpaceInvaders o-- fr.unilim.iut.model.SpaceInvaders : jeu
  fr.unilim.iut.model.Envahisseur -up-|> fr.unilim.iut.model.Sprite
  fr.unilim.iut.model.Envahisseur o-- fr.unilim.iut.model.Direction : direction
  fr.unilim.iut.model.Missile -up-|> fr.unilim.iut.model.Sprite
  fr.unilim.iut.model.SpaceInvaders .up.|> fr.unilim.iut.moteurjeu.Jeu
  fr.unilim.iut.model.SpaceInvaders o-- fr.unilim.iut.model.Collision : collision
  fr.unilim.iut.model.SpaceInvaders o-- fr.unilim.iut.model.Envahisseur : envahisseur
  fr.unilim.iut.model.SpaceInvaders o-- fr.unilim.iut.model.Vaisseau : vaisseau
  fr.unilim.iut.model.Sprite o-- fr.unilim.iut.model.Dimension : dimension
  fr.unilim.iut.model.Sprite o-- fr.unilim.iut.model.Position : origine
  fr.unilim.iut.model.Vaisseau -up-|> fr.unilim.iut.model.Sprite
  fr.unilim.iut.moteurjeu.Controleur .up.|> java.awt.event.KeyListener
  fr.unilim.iut.moteurjeu.Controleur o-- fr.unilim.iut.moteurjeu.Commande : commandeARetourner
  fr.unilim.iut.moteurjeu.Controleur o-- fr.unilim.iut.moteurjeu.Commande : commandeEnCours
  fr.unilim.iut.moteurjeu.InterfaceGraphique o-- fr.unilim.iut.moteurjeu.Controleur : controleur
  fr.unilim.iut.moteurjeu.InterfaceGraphique o-- fr.unilim.iut.moteurjeu.PanelDessin : panel
  fr.unilim.iut.moteurjeu.MoteurGraphique o-- fr.unilim.iut.moteurjeu.DessinJeu : dessin
  fr.unilim.iut.moteurjeu.MoteurGraphique o-- fr.unilim.iut.moteurjeu.InterfaceGraphique : gui
  fr.unilim.iut.moteurjeu.MoteurGraphique o-- fr.unilim.iut.moteurjeu.Jeu : jeu
  fr.unilim.iut.moteurjeu.PanelDessin -up-|> javax.swing.JPanel
  fr.unilim.iut.moteurjeu.PanelDessin o-- fr.unilim.iut.moteurjeu.DessinJeu : dessin


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
